# looped_nanochat

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: .settings.json  settings.json
analysis/: load_and_visualize.py  track_gsm8k_latent_states.py  visualize_latent_state_distances_per_loop.py  visualize_latent_state_distances_token.py  visualize_latent_trajectories_pca.py
dev/: EntropyRegularizedExitGateLOG.md  LOG.md  LoopedLOG.md  estimate_gpt3_core.ipynb  gen_synthetic_data.py  plot_poisson_lognormal.py  print_model_structure.py  repackage_data_reference.py  scaling_analysis.ipynb
dev/analysis/: common.py  gating_analysis.py  plot_bpb_vs_recur.py  plot_chatcore_vs_recur.py  plot_poisson_lognormal.py  print_model_structure.py  visualize_latent_dimreduce.py  visualize_latent_pca_trajectories.py  visualize_latent_state_dist_per_loop.py  visualize_latent_state_dist_tokens.py  visualize_latent_tsne.py
nanochat/: adamw.py  arithmetic_eval.py  checkpoint_manager.py  common.py  core_eval.py  dataloader.py  dataset.py  engine.py  execution.py  flash_attention.py  gpt.py  loss_eval.py  muon.py  optim.py  report.py  tokenizer.py
runs/: speedrun.sh
scripts/: base_eval.py  base_loss.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  complete_cli.py  exit_gate_train.py  mid_train.py  pull_from_hf.py  tok_eval.py  tok_train.py
slurm/: README.md  _submit.sh  base_eval_recur_sweep.sh  base_train.sh  base_train_hyper.sh  chat_eval.sbatch  chat_eval.sh  chat_rl.sbatch  chat_rl.sh  chat_sft.sbatch  chat_sft.sh  download_dataset.sbatch  download_dataset_cpu.sh  download_hf_checkpoints.sbatch  machine_config.sh.template  mid_train.sbatch  scaling_laws.sbatch  scaling_laws.sh  scaling_laws_non_looped.sbatch  scaling_laws_non_looped.sh  train_tokenizer.sbatch  train_tokenizer_cpu.sh
tasks/: arc.py  common.py  customjson.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
tests/: test_attention_fallback.py  test_batched_generation.py  test_calculator.py  test_engine.py  test_exit_gate.py  test_window_pattern.py
